implementing sprite drawing

--- a/diaries/10-11-2022.md
+++ b/diaries/10-11-2022.md
@@ -7,4 +7,10 @@ https://en.cppreference.com/w/cpp/numeric/random/uniform_int_distribution
 sprite is a group of bytes which are a binary rep of the desired pic
 - up to 15 bytes for a possible sprite of 8 x 15
 - number of bytes n correspon to 8 x n sprite in pixels where 8 is num of columns and n is num of rows
+- example sprite:
+    11110000 0xF0 --> each bit represents a pixel on the screen
+    10010000 0x90
+    10010000 0x90
+    10010000 0x90
+    11110000 0xF0
 - there's a group of sprites rep hexadecimal 0 - F stored in memory 0x000 to 0x1FF
