--- a/diaries/10-10-2022.md
+++ b/diaries/10-10-2022.md
@@ -1,33 +1,31 @@
-# Day 1, 10-10-2022
+# 10-10-2022
 
-I really should make a personal website to track my projects.
+I started off by coding a random generator to generate numbers between 0 - 255 because that functionality is done in the chip8 hardware.
+I originally used srand(time(NULL)) to seed my generator and the rand() % 256 function to generate the random number; however, I was getting a terrible distribution of numbers. I did a little searching online and found a better way for C++11 versions and later using uniform_int_distribution:
+- https://stackoverflow.com/questions/37840270/rand-not-generating-random-numbers-even-after-srandtimenull
+- https://en.cppreference.com/w/cpp/numeric/random/uniform_int_distribution
 
-Anyways, I've decided to make a chip8 emulator. I was inspired to do this from my experiences using gameboy and nintendo emulators as a kid
-to play pokemon and kirby. I was intrigued by how the emulator was able to turn the hardware consoles into a piece of software to run on a
-computer. Originally, I wanted to make a GBA emulator; however, after doing some searching online, it's best for me to start small and
-build my skills up. Therefore, I'm starting with a simple chip8 emulator whose components and instruction set are small and simple.
+I've added these references to my list on the README. 
 
-To me, it seems that emulating is turning the hardware console into a piece of software that you can run on your computer. This software
-is kind of like a virtual machine that "emulates" the console.
+I also worked on implementing drawing a sprite from memory onto the video array. I first needed to figure out what a sprite was. A sprite is a
+group of bytes which are a binary representation of a desired graphic. In chip8, a sprite is always 8 bits in width but has a variable height from
+1 to 15. Therefore, an 8 x n sprite corresponds to n bytes contiguous bytes in memory. Each individual bit that is 1 in the sprite represents
+a pixel drawn to their corresponding location. Here's an example of the sprite depicting 0:
+    11110000 0xF0 --> each bit represents a pixel on the screen
+    10010000 0x90
+    10010000 0x90
+    10010000 0x90
+    11110000 0xF0
 
-I remember looking for all the pokemon ROMs online, googling "Pokemon Emerald roms free online" or something of the sort. I never really understood
-what the ROM files were; all I knew is that I needed to load a specific ROM associated with a specific game to play that game in my emulator.
-This is actually not so far from how ROMs actually work. They're the files that contain the list of machine code instructions to execute to run
-the game. Each instruction is 16 bits but we usually read the files in words of 8 bits (1 byte per word).
+If we want to draw a sprite starting at (x, y), we need to convert (x, y) into the index of that coordinate in our video array.
+Video Index = y * VIDEO_WIDTH + x
 
-From here, I understood that I would need to create a program to read the ROM and interpret each instruction. Thus, I would be emulating the actual
-console (chip8 in this case).
+VIDEO_WIDTH = 64
+VIDEO_HEIGHT = 32
 
-I studied the components of chip8 that I would have to keep track of. Then I pulled up a list of the instructions I would have to implement and
-wrote functions for them. This is a good starting point.
+Sprites are XORed with the current video bit; if we want to draw a sprite bit on a video bit that's already on, a collision occurs and the 
+video bit is set to 0 (because it was XORed). When a collision occurs, the VF register should be set to 1.
 
-At the end of the day, I think the general framework for creating an emulation goes as follows:
-1. Research the details of the components of the hardware (stack, memory, pc, etc) and try to replicate this in code
-2. Get a ROM for the hardware your trying to emulate and read it into memory. Print each instruction and play around with it.
-I had a lightbulb moment when I loaded in the puzzle.rom file as a binary file. I loaded in each byte into a buffer and stored the buffer in my
-memory variable. I printed each 2 bytes to analyze the instructions. The first instruction that I saw was 00E0 (CLS), which tells the machine to
-clear the display. It was exciting because I knew I had read the binary file correctly and it was cool seeing the concepts put into reality.
-3. Research the instruction set of the hardware and create functioins for each in the code; the instruction set will intertwine heavily with 
-the components of the hardware that you replicated earlier.
-
-Very general framework, but it helps me understand a little more how people go about creating emulations.
+On a side note, there's a group of sprites representing hexadecimal 0 - F stored in memory 0x000 to 0x1FF (this memory is reserved for those
+sprites). I haven't implemented this in my memory yet, but it's on the todo. Also, I have to make sure to modularize the way I extract
+my bits from the opcode using a function for each extraction because I'm repeating certain extractions a lot. That's for next time!
