--- a/diaries/10-11-2022.md
+++ b/diaries/10-11-2022.md
@@ -12,11 +12,9 @@ If more time than the cycleDelay constant elapsed, we can call the Cycle functio
 we can just go to the next iteration of the loop without calling Cycle.
 
 I ran into an interesting problem while developing the cycle function. I was trying to extract the opcode from memory with the following code:
-
 ```
 opcode = (memory[pc] << 8u) | memory[pc + 1]
 ```
-
 opcode is 16 bits while the elements in memory are 8 bits each. I was confused on what `memory[pc] << 8u` would do because the element is only
 8 bits long. There could be two cases: the expression results in 0 because all the bits get shifted out, or the expression expands to a size
 large enough to store the bits shifted left. I did a little searching online and asking on a programming discord server to figure out the
@@ -24,38 +22,29 @@ rule cpp uses for cases like this. I got a reply "anything smaller than int is p
 a stack overflow post had a similar statement. It turns out that all integer types less than type int is **promoted to an int** before 
 **any arithmetic operation**.
 
-function pointer syntax
-void (*foo)(int);
-- foo is a pointer to a function taking one arg of an integer that returns void.
-
+To decode the opcode, I need to map the opcode given to the correct function. I knew a hash map would be good to map an opcode to the function; however, I was unsure
+what the value of the hash map was going to be. I needed the value to point to the correct function. I did some searching and found that C++ function pointers is a
+solution. I created a mapping for each opcode; however, I ran into a few problems when trying to call the functions stored in my mappings. I tried to access the
+value of the function and call it like so:
 ```
-#include <stdio.h>
-void my_int_func(int x)
-{
-    printf( "%d\n", x );
-}
- 
-int main()
-{
-    void (*foo)(int);
-    /* the ampersand is actually optional */
-    foo = &my_int_func;
- 
-    return 0;
+void I_0(){
+    functions0[opcode & 0xFF]();
 }
 ```
+I kept on getting a `function-pointer-expression-preceding-parantheses-of-apprent-call-must-have...` error. A stack overflow post helped me understand that I needed to
+use the `this` keyword to reference my function. At first, I didn't understand why this would necessary because I could access the function table without using the
+keyword. After thinking about it more, I understood that the function pointers were unique to each instantiation of the class, which is why I needed to use `this` to 
+access them and correctly call them.
 
-```
+I proceeded to test my extracting, decoding, and executing by loading a ROM into the chip8 instantiation in main and running the Cycle function every 1 ms. I used a
+new library chrono to compare times to set the clock speed to 1 Cycle / ms. It seems to be working as there were no errors with the ROM test. I also tried to run certain
+functions by manually inputting their opcode as the first instruction and they worked as expected.
 
-    void I_0(){
-        functions0[opcode & 0xFF]();
-    }
+I still have to implement the actual screen and keyboard input (I/O devices), which I will do next time.
 
-```
-
-https://stackoverflow.com/questions/68174660/function-pointer-expression-preceding-parentheses-of-apparent-call-must-have
-https://stackoverflow.com/questions/19555121/how-to-get-current-timestamp-in-milliseconds-since-1970-just-the-way-java-gets
-
-https://www.cprogramming.com/tutorial/function-pointers.html
-https://stackoverflow.com/questions/24370732/what-does-natural-size-really-mean-in-c
-https://www.techopedia.com/definition/5498/clock-cycle
+References:
+- https://stackoverflow.com/questions/68174660/function-pointer-expression-preceding-parentheses-of-apparent-call-must-have
+- https://stackoverflow.com/questions/19555121/how-to-get-current-timestamp-in-milliseconds-since-1970-just-the-way-java-gets
+- https://www.cprogramming.com/tutorial/function-pointers.html
+- https://stackoverflow.com/questions/24370732/what-does-natural-size-really-mean-in-c
+- https://www.techopedia.com/definition/5498/clock-cycle
