--- a/diaries/10-12-2022.md
+++ b/diaries/10-12-2022.md
@@ -1,15 +1,20 @@
 # 10-12-2022
 
-install sdl2
+I worked on implementing the I/O using the SDL2 library for graphics and keyboard input. Today was probably the hardest day of all
+because the SDL2 library is quite complex. I spent hours reading the documentation to understand how to best render the bits
+in the video array using SDL2. I'm not going to lie; this was very difficult and complicated, and I still don't understand
+some things.
 
+After finishing my Device class that implemented the SDL2 library, I tried to put it all together to run. I was able to compile
+my program successfuly. My program starts out fine and opens correctly; however, I get a segmentation fault whenever I input anything
+through the keyboard. I will have to debug this tomorrow.
 
+References:
 https://www.matsson.com/prog/sdl2-mingw-w64-tutorial.php
 https://stackoverflow.com/questions/34079288/im-using-the-sdl-functions-without-the-sdl-main-be-defined-is-that-fine
-
 https://wiki.libsdl.org/APIByCategory
-
 https://stackoverflow.com/questions/9223611/using-sdl-image-in-visual-studio-2010-with-error-application-was-unable-to-sta
 https://imagemagick.org/script/convert.php
-https://xyproblem.info/
 https://stackoverflow.com/questions/33304351/sdl2-fast-pixel-manipulation
 https://lazyfoo.net/tutorials/SDL/42_texture_streaming/index.php
+https://xyproblem.info/
